# plasmasnow

./: ChangeLog  Changes  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  addcopyright.sh  bootdate  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  dependencies  getDebianDeps  getFedoraDeps  initconfigure  simplemake.sh
afterburner/: Makefile  Makefile.am  Makefile.in
autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.3  traces.4
data/: Makefile  Makefile.am  Makefile.in  plasmasnow.appdata.xml.in  plasmasnow.desktop.in
po/: ChangeLog  Makefile  Makefile.in  POTFILES  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.gmo  hu.po  is.gmo  is.po  it.gmo  it.po  lt.gmo  lt.po  lv.gmo  lv.po  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  plasmasnow.pot  pt.gmo  (+9 more)
pofiles/: cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fr.po  hu.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sv.po  uk.po
src/: Application.c  Application.h  Aurora.c  Aurora.h  Blowoff.c  Blowoff.h  ClockHelper.c  ClockHelper.h  ColorPicker.c  ColorPicker.cpp  ColorPicker.h  FallenSnow.c  FallenSnow.h  Flags.c  Flags.h  Lights.cpp  Lights.h  LoadMeasure.c  LoadMeasure.h  MainWindow.c  MainWindow.h  Makefile  Makefile.am  Makefile.in  MsgBox.cpp  PlasmaSnow.h  Prefs.cpp  Prefs.h  Santa.c  Santa.h  SplashPage.cpp  SplashPage.h  Stars.c  Stars.h  Storm.c  Storm.cpp  Storm.h  StormItem.cpp  StormItem.h  StormItemSurface.h  (+99 more)
src/.deps/: libxdo_a-xdo.Po  libxdo_a-xdo_search.Po  plasmasnow-Santa.Po  plasmasnow-aurora.Po  plasmasnow-birds.Po  plasmasnow-blowoff.Po  plasmasnow-clientwin.Po  plasmasnow-clocks.Po  plasmasnow-colorPicker.Po  plasmasnow-csvpos.Po  plasmasnow-docs.Po  plasmasnow-dsimple.Po  plasmasnow-fallensnow.Po  plasmasnow-flags.Po  plasmasnow-hashtable.Po  plasmasnow-ixpm.Po  plasmasnow-kdtree.Po  plasmasnow-loadmeasure.Po  plasmasnow-main.Po  plasmasnow-mainstub.Po  plasmasnow-meteor.Po  plasmasnow-moon.Po  plasmasnow-pixmaps.Po  plasmasnow-safe_malloc.Po  plasmasnow-scenery.Po  plasmasnow-selfrep.Po  plasmasnow-snow.Po  plasmasnow-spline_interpol.Po  plasmasnow-stars.Po  plasmasnow-transwindow.Po  plasmasnow-treesnow.Po  plasmasnow-ui.Po  plasmasnow-utils.Po  plasmasnow-wind.Po  plasmasnow-windows.Po  plasmasnow-wmctrl.Po
src/Pixmaps/: AltSanta1.xpm  AltSanta2.xpm  AltSanta3.xpm  AltSanta4.xpm  AltSantaRudolf1.xpm  AltSantaRudolf2.xpm  AltSantaRudolf3.xpm  AltSantaRudolf4.xpm  AmericanBulb.xpm  BalloonsBulb.xpm  BigSanta1.xpm  BigSanta2.xpm  BigSanta3.xpm  BigSanta4.xpm  BigSanta81.xpm  BigSanta82.xpm  BigSanta83.xpm  BigSanta84.xpm  BigSantaRudolf1.xpm  BigSantaRudolf2.xpm  BigSantaRudolf3.xpm  BigSantaRudolf4.xpm  BigSantaRudolf81.xpm  BigSantaRudolf82.xpm  BigSantaRudolf83.xpm  BigSantaRudolf84.xpm  CandleBulb.xpm  CloverBulb.xpm  ColonyHatBulb.xpm  DottedEggBulb.xpm  DrinksBulb.xpm  EasterBunnyBulb.xpm  EasterChickBulb.xpm  EasterEggBulb.xpm  EasterSignBulb.xpm  FancyCloverBulb.xpm  FireworksBulb.xpm  FlowerVaseBulb.xpm  GhostBulb.xpm  HalloweenBulb.xpm  (+122 more)
